# parlgov-web

./: .dockerignore  .gitignore  .pre-commit-config.yaml  .prettierignore  .typos.toml  .zenodo.json  CHANGELOG.md  CITATION.cff  LICENSE  README.md  codemeta.json  docker-compose.yaml  fly.toml  justfile  mkdocs.yaml  pyproject.toml  requirements-dev.txt  requirements.txt  schema.yaml
.claude/skills/fix-codebook-links/: SKILL.md
.claude/skills/fix-codebook-links/scripts/: fix_links.py
.devcontainer/: devcontainer.json
.github/: dependabot.yaml  pull_request_template.md
.github/workflows/: deploy-docs.yaml  deploy-docs.yml  deploy-flyio.yaml  merge-dependabot.yaml  run-ci-checks.yaml
_docker/: Dockerfile-flyio  Dockerfile-local-dev  entrypoint-flyio.sh
_docs/: 404.html  index.html
_docs/assets/: parlgov-web.key
_docs/development/: index.html
_docs/migration/: index.html
_docs/project-history/: index.html
_docs/search/: search_index.json
_docs/usage/: index.html
app/: .coveragerc  README.md
app/apps/: conftest.py  urls.py
app/apps/api/: serializers.py  tests.py  urls.py  views.py
app/apps/base/: apps.py  models.py  test_admin.py  test_settings.py  test_views.py  views.py
app/apps/base/templatetags/: format_data.py  markdown_extras.py
app/apps/data/cabinets/: admin.py  apps.py  models.py  urls.py  validation.py  views.py
app/apps/data/core/: admin.py  apps.py  helptext.py  models.py  utils.py  validators.py  views.py
app/apps/data/elections/: admin.py  apps.py  models.py  urls.py  validation.py  views.py
app/apps/data/parties/: admin.py  apps.py  models.py  urls.py  validation.py  views.py
app/apps/docs/: admin.py  apps.py  codebook.py  models.py  urls.py  views.py
app/apps/docs/migrations/: 0001_initial.py
app/apps/docs/tests/: conftest.py  factories.py  test_codebook.py  test_models.py  test_views.py
app/apps/pages/: apps.py  urls.py  utils.py  views.py
app/apps/pages/tests/: test_bootstrap.py  (+4 more)
app/apps/views_data/: apps.py  tests.py  views-data.sql  views.py
app/config/: .env.codespace  .env.example  asgi.py  settings.py  wsgi.py
app/staticfiles/: .gitignore
app/templates/: 403.html  404.html  500.html  base.html
app/templates/_includes/: admin.html  clear-cache-modal.html  previous-next.html  tooltip-initialize.html
app/templates/data/: _include_form-select-country.html  cabinet-detail.html  cabinet-list.html  data-index.html  election-detail.html  election-detail_results.html  election-list.html  party-detail.html  party-detail_change.html  party-detail_elections.html  party-list.html
app/templates/docs/: _include_nav-sections.html  codebook-markdown.txt  codebook.html  news.html
app/templates/home/: home.html  home_carousel.html  home_project-description.html
app/templates/pages/: login.html
docs/: .markdownlint.jsonc  development.md  index.md  migration.md  project-history.md  usage.md
docs/assets/: parlgov-codebook.md
scripts/: create-codebook.sh  create-db-public.py  format-with-prettier.sh  graph-data-models.sh  init-dev-project.sh  package-lock.json  package-to-web.sh  recreate-project.sh  update-packages.sh
scripts/migrate_parlgov-db/: README.md  country-flags.csv  migrate-csv.sh  migrate-db.R  migrate-db.sh  migration-check.R  migration-check.csv
scripts/migrate_parlgov-db/import-data-legacy/: 01__datacore__Code.csv  02__datacore__Country.csv  12__docs__News.csv  13__docs__Page.csv  21__parties__Party.csv  22__parties__PartyFamily.csv  23__parties__PartyNameChange.csv  24__parties__PartyChange.csv  31__elections__Election.csv  32__elections__ElectionResult.csv  41__cabinets__Cabinet.csv  42__cabinets__CabinetParty.csv
(+39 files in other folders)
